--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -229,6 +229,7 @@ Ext.define('CustomApp', {
 		});
 
 		var tips = {
+			trackMouse: false,
 			renderer: function(storeItem, item) {
     			this.setTitle(storeItem.get('day') + " - " + item.series.yField + ' : ' + Math.round(storeItem.data[item.series.yField] * 100) / 100 );
 			}
@@ -3427,10 +3428,15 @@ Ext.define('CustomApp', {
     </script>
 
 
-
     <style type="text/css">
         .app {
   /* Add app styles here */
+}
+/* 0 out padding on tip body container to remove black box below tip text in title
+   tips are not officially supported in our version of Ext.chart.Chart so this is the
+   only way to fix. */
+.x-tip .x-tip-body {
+  padding: 0px !important;
 }
 
     </style>
